src/pages/HomePage/HomePage.css
.HomePage__wrapper {
  background: url("../../../public/assets/home/background-home-mobile.jpg")
    no-repeat;
  background-size: cover;
  background-position: center;
  width: 100%;
  min-height: 100svh;
}

.HomePage__container {
  padding: 6.5rem 1.5rem 1.5rem 1.5rem;
  gap: auto;
}

.HomePage__container,
.HomePage__text--content {
  display: flex;
  flex-direction: column;
  align-items: center;
  text-align: center;
}

.HomePage__text--content {
  flex: 1;
  gap: 1.5rem;
}

.HomePage__btn--wrapper {
  flex: 1;
}

.HomePage__subtitle {
  color: var(--blue-300);
  font-family: "Barlow Condensed Regular";
  font-weight: 400;
  font-size: 1rem;
  letter-spacing: 2px;
}

.HomePage__title {
  color: var(--white);
  font-family: "Bellefair Regular";
  font-weight: 400;
  font-size: 5rem;
}

.HomePage__paragraph {
  color: var(--blue-300);
  font-family: "Barlow Regular";
  line-height: 1.8;
  font-size: 0.938rem;
}

.HomePage__btn {
  background: var(--white);
  color: var(--blue-900);
  font-family: "Bellefair Regular";
  font-weight: 400;
  font-size: 1.125rem;
  width: 9rem;
  height: 9rem;
  border-radius: 100%;
}

@media only screen and (min-width: 48rem) {
  .HomePage__wrapper {
    background: url("../../../public/assets/home/background-home-tablet.jpg")
      no-repeat;
    background-size: cover;
    background-position: center;
  }

  .HomePage__container {
    padding: 12rem 2.5rem 8rem 2.5rem;
    gap: 4rem;
  }

  .HomePage__title {
    font-size: 9rem;
  }

  .HomePage__subtitle {
    font-size: 1.75rem;
  }

  .HomePage__text--content,
  .HomePage__btn--wrapper {
    max-width: 32rem;
  }

  .HomePage__btn {
    width: 17rem;
    height: 17rem;
    font-size: 2rem;
  }
}

@media only screen and (min-width: 64rem) {
  .HomePage__wrapper {
    background: url("../../../public/assets/home/background-home-desktop.jpg")
      no-repeat;
    background-size: cover;
    background-position: center;
  }

  .HomePage__container {
    flex-direction: row;
    justify-content: center;
    align-items: flex-end;
    min-height: 100svh;
    padding: 12rem 0 8rem 0;
  }

  .HomePage__text--content {
    align-items: flex-start;
    text-align: left;
    flex: 1;

    .HomePage__paragraph {
      font-size: 1.125rem;
    }
  }

  .HomePage__btn--wrapper {
    display: flex;
    flex: 1;
    justify-content: flex-end;
    height: 21.438rem;
  }
}

